// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense summary component correctly with data 1`] = `
<div>
  Viewing 
  3
   
  expenses
   totalling 
  $4,598.75
</div>
`;

exports[`should render expense summary component correctly with empty array 1`] = `
<div>
  Viewing 
  0
   
  expenses
   totalling 
  $0.00
</div>
`;
